// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`message renders correctly 1`] = `
<div
  className="css-text-901oao"
  dir="auto"
>
  Hello
</div>
`;

exports[`random Message renders correctly 1`] = `
<div
  className="css-text-901oao"
  dir="auto"
  onClick={[Function]}
>
  Hello
</div>
`;
